<resources>
    <string name="app_name">GO</string>
    <string name="abaixo_os_cursos">Abaixo os cursos e vagas diponíveis:</string>
    <string name="click_sobre">Click sobre a opção desejada!</string>
    <string name="nao_encontrou">Não encontrou o que procurava?</string>
    <string name="cadastre_se">Cadastre-se na lista de espera.</string>
    <string name="lista_de_espera">Lista de Espera</string>
    <string name="todo">TODO</string>
    <string name="matricula_efetuada">Matrícula efetuada com sucesso!</string>
    <string name="Orientamos">Orientamos chegar 15 min antes para um bom aproveitamento da aula!</string>
    <string name="sair">SAIR</string>
    <string name="voltar_ao_menu_de_vagas">Voltar ao menu de vagas</string>
    <string name="todo1">TODO</string>
    <string name="atividades_selecionadas">Atividades selecionadas:</string>
    <string name="confirmar_matricula">Confirmar Matrícula</string>
    <string name="todo2">TODO</string>
    <string name="login">Login</string>
    <string name="entrar">ENTRAR</string>
    <string name="esqueci_minha_matricula">Esqueci minha matrícula</string>
    <string name="todo3">Todo3</string>
    <string name="buscar">BUSCAR</string>
    <string name="atividades_culturais">Atividades culturais</string>
    <string name="atividades_esportivas">Atividades esportivas</string>
    <string name="atividades_extra_disciplinares">Atividades extra-disciplinares</string>
    <string name="atividades_recreativas">Atividades recreativas</string>
    <string name="todo4">TODO</string>
    <string name="enviar">ENVIAR</string>
    <string name="seu_numero">Seu número de matricula é o mesmo utilizado na escola . Caso não lembre, sem problemas!</string>
    <string name="insira_seu_email">Insira seu email abaixo que enviaremos em instantes!</string>
    <string name="email">email</string>
    <string name="Resultados">Resultados</string>
    <string name="muito_obrigado">Muito Obrigado por usar o app GO!</string>
    <string name="fechar">FECHAR</string>
    <string name="insira_abaixo">Insira abaixo o curso que deseja entrar na lista de espera.</string>
    <string name="btentrar">ENTRAR</string>
    <string name="avisaremos">Avisaremos por email quando tivermos disponibilidade</string>
    <string name="matricula">Matrícula</string>
    <string name="ola_estudante">Olá, Estudante! Bem vindo à sua plataforma de agendamento de atividades!</string>
    <string name="todo5">todo5</string>
    <string name="todo6">todo6</string>
    <string name="todo7">todo7</string>
    <string name="curso">Descreva aqui os cursos e horários</string>
    <string name="todo8">todo8</string>
    <string name="logout">LOGOUT</string>
</resources>