<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="123dp"
        android:layout_height="141dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logogo" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Resultados"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvAbaixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:onClick="chamarActivity4"
        android:text="@string/abaixo_os_cursos"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvTecle..."
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/click_sobre"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvnao..."
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvnao..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/nao_encontrou"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvcadastre..."
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvcadastre..."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/cadastre_se"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btListaEspera"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/lista"
        android:layout_width="344dp"
        android:layout_height="292dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTecle..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbaixo" />

    <Button
        android:id="@+id/btListaEspera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="chamarActivity7"
        android:text="@string/lista_de_espera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>