<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <Button
        android:id="@+id/btBuscar"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:onClick="chamarActivity2"
        android:text="@string/entrar"
        android:textSize="16sp"
        app:backgroundTint="#AD4EBD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etmatricula" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="123dp"
        android:layout_height="141dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logogo" />

    <TextView
        android:id="@+id/tvEsqueci"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:onClick="chamarActivity6"
        android:singleLine="true"
        android:text="@string/esqueci_minha_matricula"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etmatricula"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/matricula"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>